fixed the scrollbar rendering and change the navbar style for active link and change the opacity of the header image to 0.8

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -11,6 +11,7 @@
   justify-content: center;
   /* align-items: center; */
   flex-wrap: wrap;
+  overflow-y: scroll;
   overflow-x: hidden;
   background: linear-gradient(rgb(48, 20, 20, 0.5), rgb(48, 20, 20, 0.5)),
     url("https://wallpapersflix.com/anime/wp-content/uploads/2020/07/Anime-Background-For-Computer.jpg");
@@ -43,7 +44,7 @@
   height: 70%;
   border-radius: 10px;
   z-index: 1;
-  opacity: 0.6;
+  opacity: 0.8;
   position: fixed;
   top: 0;
 }
@@ -299,12 +300,9 @@ nav {
   padding: 0px;
   /* border: solid green; */
 }
-.aListWithShadow {
-  font-size: 1rem;
+.aListWithShadow,
+.aListWithShadow:hover {
   text-decoration: none;
-  /* color: yellow; */
-  margin: 0;
-  padding: 10px;
   border-bottom: solid;
 }
 .aList {
